ejabberd (2.1.10-1) experimental; urgency=low

  [ Konstantin Khomoutov ]
  * New upstream release.

 -- Konstantin Khomoutov <flatworm@users.sourceforge.net>  Tue, 27 Dec 2011 14:24:48 +0400

ejabberd (2.1.9-1) unstable; urgency=low

  [ Konstantin Khomoutov ]
  * New upstream release.
  * Remove obsoleted version.patch.

 -- Konstantin Khomoutov <flatworm@users.sourceforge.net>  Mon, 03 Oct 2011 20:27:12 +0400

ejabberd (2.1.8-1) unstable; urgency=low

  [ Konstantin Khomoutov ]
  * New upstream release.
  * Remove patch fixing DSA-2248-1 (CVE-2011-1753)
    as the fix is now integrated upstream.
  * Drop patches from OLPC project implementing @recent@ and @online@
    shared roster groups; support for @online@ is now intergated upstream.
  * Add patch fixing version string where applicable (EJAB-1484).
  * Bump standards version to 3.9.2

  [ Gerfried Fuchs ]
  * Add recommended targets build-arch and build-indep to debian/rules.
  * Fix spelling error in manpage noticed by lintian.

 -- Gerfried Fuchs <rhonda@debian.org>  Sun, 11 Sep 2011 16:16:55 +0200

ejabberd (2.1.6-2.1) unstable; urgency=high

  * Non-maintainer upload by the Security Team.
  * Disable entity expansion completely to prevent against
    billion laugs DoS attack (CVE-2011-1753).

 -- Nico Golde <nion@debian.org>  Mon, 30 May 2011 23:53:46 +0200

ejabberd (2.1.6-2) unstable; urgency=low

  * Artifically set HOME environment variable in debian/rules
    if it is not set--this is required for the erlexec binary
    to be able to run successfully (closes: #620683).

 -- Konstantin Khomoutov <flatworm@users.sourceforge.net>  Wed, 06 Apr 2011 01:32:42 +0400

ejabberd (2.1.6-1) unstable; urgency=low

  * New upstream release.
  * Remove obsolete patches.
  * Update mod_admin_extra to revision 1106.
  * Conflict with ejabberd-mod-shared-roster-ldap which is now included.

 -- Konstantin Khomoutov <flatworm@users.sourceforge.net>  Tue, 14 Dec 2010 17:45:08 +0300
